# imagine-models

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
ImagineModels/: __init__.py
ImagineModels/HelperFunctions/: PlottingHelpers.py
ImagineModels/MagneticFields/: LocalBubbleMagneticField.py  RegularMagneticFields.py
ImagineModels/bindings/: imagine_models.cc  trampoline.h
ImagineModels/c/headers/: MagneticField.h
ImagineModels/c/source/: regular.cc
ImagineModels/headers/: MagneticField.h
ImagineModels/python/: imagine_models.cc  temp_pyarray.cc  trampoline.h
ImagineModels/python/HelperFunctions/: CoordinateConversions.py
ImagineModels/python/MagneticFields/: RegularMagneticFields.py
ImagineModels/python_wrapper/: imagine_models.cc  trampoline.h
ImagineModels/src/: jf12.cc
c_library/: CMakeLists.txt  ImagineModels.pc.in
c_library/headers/: AbstractFields.h  EnsslinSteininger.h  Fauvet.h  Field.h  GaussianScalar.h  HarariMollerachRoulet.h  Helix.h  Jaffe.h  MagneticField.h  RandomField.h  RandomField.tpp  RandomJF12.h  RandomModels.h  RegularField.h  RegularJF12.h  RegularModels.h  StanevBSS.h  Sun.h  ThermalElectronField.h  TinyakovTkachev.h  Uniform.h  WMAP.h  YMW.h  autodiff.hh.in  exceptions.h  fftw.hh.in  helpers.h  param.h  random.tpp
c_library/headers/ImagineModels/: Archimedes.h  Fauvet.h  Field.h  Han.h  HarariMollerachRoulet.h  Helix.h  Jaffe.h  Pshirkov.h  RandomField.h  RandomModels.h  RegularField.h  RegularJF12.h  RegularModels.h  SVT22.h  StanevBSS.h  Sun.h  TF17.h  TinyakovTkachev.h  Uniform.h  WMAP.h  YMW.h  helpers.h  param.h
c_library/headers/ImagineModelsRandom/: EnsslinSteininger.h  GaussianScalar.h  LogNormal.h  RandomField.h  RandomJF12.h  RandomModels.h  RandomScalarField.h  RandomVectorField.h  random.tpp
c_library/include/config/: autodiff.hh  autodiff.hh.in  fftw.hh.in  fftw3.hh
c_library/source/: Disc.cc  SVT22.cc  archimedes.cc  component.cc  disc.cc  ensslinsteininger.cc  fauvet.cc  gaussianscalar.cc  han.cc  hararimollerachroulet.cc  helix.cc  helpers.cc  jaffe.cc  jf12.cc  lognormal.cc  pshirkov.cc  randomjf12.cc  randomscalar.cc  randomscalarfield.cc  randomvector.cc  randomvectorfield.cc  regular.cc  regularjf12.cc  stanevbss.cc  sun.cc  svt22.cc  tf17.cc  tinyakovtkachev.cc  wmap.cc  ymw16.cc
c_library/test/regular/: test_grid.cc  test_parameter_update.cc  test_positions.cc
demos/cpp/: example  example.cc
demos/python/: example.py  model_library_demo.ipynb
demos/python/model_examples/: archimedes_demo.ipynb  fauvet_demo.ipynb  gaussian_scalar_demo.ipynb  han_demo.ipynb  hmr_demo.ipynb  jaffe_demo.ipynb  jf12_random_demo.ipynb  jf12_regular_demo.ipynb  plotting_helpers.py  pshirkov_demo.ipynb  stanev_demo.ipynb  sun_demo.ipynb  svt22_demo.ipynb  tf17_demo.ipynb  tt_demo copy.ipynb  tt_demo.ipynb  wmap_demo.ipynb  ymw16_demo.ipynb
examples/cpp/: example.cc
examples/python/: example.py
python_wrapper/: ImagineModels.cc  abstract_trampoline.h  imagine_models.cc  magnetic_trampoline.h  thermal_trampoline.h  trampoline.h
python_wrapper/include/: FieldBases.h  array_converters.h  autodiff_wrapper.h  random_trampoline.h  regular_trampoline.h
python_wrapper/include/random/: EnsslinSteiningerWrapper.h  GaussianScalarWrapper.h  LogNormalWrapper.h  RandomFieldBases.h  RandomJF12Wrapper.h
python_wrapper/include/regular/: ArchimedeanWrapper.h  FauvetWrapper.h  HanWrapper.h  HarariMollerachRouletWrapper.h  HelixWrapper.h  JaffeWrapper.h  PshirkovWrapper.h  RegularFieldBases.h  RegularJF12Wrapper.h  SVT22Wrapper.h  StanevBSSWrapper.h  SunWrapper.h  TF17Wrapper.h  TinyakovTkachevWrapper.h  UniformWrapper.h  WMAPWrapper.h  YMW16Wrapper.h
python_wrapper/source/: FieldBases.cc  ImagineModels.cc  RegularFieldBases.cc  RegularJF12.cc
test/cpp/: test.cc
test/python/: test_hammurabi_wrapper.py
tests/: test_regular_fields.py
tests/cpp/: test_regular_fields.cc
tests/python/: test_regular_fields.py
